[metadata]
name = lnmiit-netaccess
version = 0.0.1
author = Priyansh Bordia
author_email = priyanshbordia1@gmail.com
description = Automate the process of creating a network access request for LNMIT students
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PriyanshBordia/netaccess
project_urls =
    Bug Tracker = https://github.com/PriyanshBordia/netaccess/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src